// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/TextBox should match snapshot with additional, optional props 1`] = `
<div>
  <div
    class="textarea-wrapper textarea-wrapper-preview textarea-wrapper-preview--disabled"
  >
    <div
      class="form-control custom-textarea textbox-preview-area"
      tabindex="0"
    >
      <div
        data-testid="post-markdown"
      >
        some test text
      </div>
    </div>
    <textarea
      class="form-control custom-textarea textbox-edit-area custom-textarea--emoji-picker bad-connection"
      data-testid="suggestion-box"
      disabled=""
      id="someid"
      placeholder="placeholder text"
      readonly=""
      style="visibility: hidden;"
    >
      some test text
    </textarea>
  </div>
</div>
`;

exports[`components/TextBox should match snapshot with required props 1`] = `
<div>
  <div
    class="textarea-wrapper"
  >
    <div
      class="form-control custom-textarea textbox-preview-area"
      tabindex="0"
    >
      <div
        data-testid="post-markdown"
      >
        some test text
      </div>
    </div>
    <textarea
      class="form-control custom-textarea textbox-edit-area"
      data-testid="suggestion-box"
      id="someid"
      placeholder="placeholder text"
      readonly=""
      style="visibility: visible;"
    >
      some test text
    </textarea>
  </div>
</div>
`;

exports[`components/TextBox should throw error when new property is too long 1`] = `
<div>
  <div
    class="textarea-wrapper"
  >
    <div
      class="form-control custom-textarea textbox-preview-area"
      tabindex="0"
    >
      <div
        data-testid="post-markdown"
      >
        some test text that exceeds char limit
      </div>
    </div>
    <textarea
      class="form-control custom-textarea textbox-edit-area"
      data-testid="suggestion-box"
      id="someid"
      placeholder="placeholder text"
      readonly=""
      style="visibility: visible;"
    >
      some test text that exceeds char limit
    </textarea>
  </div>
</div>
`;

exports[`components/TextBox should throw error when value is too long 1`] = `
<div>
  <div
    class="textarea-wrapper"
  >
    <div
      class="form-control custom-textarea textbox-preview-area"
      tabindex="0"
    >
      <div
        data-testid="post-markdown"
      >
        some test text that exceeds char limit
      </div>
    </div>
    <textarea
      class="form-control custom-textarea textbox-edit-area"
      data-testid="suggestion-box"
      id="someid"
      placeholder="placeholder text"
      readonly=""
      style="visibility: visible;"
    >
      some test text that exceeds char limit
    </textarea>
  </div>
</div>
`;
